exploration/triggers/gateway/haproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: gateway
